--- a/service-web.html
+++ b/service-web.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Web制作・マーケティング支援 | 株式会社EXPAND</title>
-  <meta name="description" content="Web制作・マーケティング支援サービスのご紹介。コーポレートサイト制作からSEO、広告運用まで、成果につながるデジタル戦略を支援します。">
+  <meta name="description" content="Web制作・マーケティング支援サービスのご紹介。コーポレートサイト・LP制作から、導線設計・SEO・広告運用・分析まで、“成果につながるWeb活用”を一気通貫で伴走します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="Web制作・マーケティング支援 | 株式会社EXPAND">
-  <meta property="og:description" content="「伝わる」Webサイトとマーケティング設計で、問い合わせ増加と売上向上をサポートします。">
+  <meta property="og:description" content="営業・採用・問い合わせなど、目的に合ったWebサイトとマーケティング施策で、成果につながる導線づくりを支援します。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -16,7 +16,7 @@
   <header class="site-header">
     <a class="brand" href="index.html">
       <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
-     <!--
+      <!--
       <span class="brand-text">EXPAND</span>
       -->
     </a>
@@ -27,101 +27,257 @@
     </nav>
   </header>
 
-<main>
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero-inner">
-      <h1>Web制作・マーケティング支援</h1>
-      <p class="lead">
-        「きれいなだけのサイト」ではなく、<br>
-        事業の目的達成に貢献する Web とマーケティングを設計します。
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="hero-inner">
+        <h1>Web制作・マーケティング支援</h1>
+        <p class="lead">
+          「作って終わり」のWebサイトではなく、<br>
+          営業・採用・問い合わせなどの“成果”につながるWebとマーケティングを、一緒に設計・運用します。
+        </p>
+      </div>
+    </section>
+
+    <!-- 課題セクション -->
+    <section class="section">
+      <h2>こんな課題はありませんか？</h2>
+      <ul>
+        <li>コーポレートサイトやサービスサイトが古く、今の事業内容や強みを反映できていない</li>
+        <li>Webからの問い合わせや資料請求が少なく、「何が原因か」が分からない</li>
+        <li>LPや広告は作ったが、CV（成果）につながっているかの手応えがない</li>
+        <li>アクセス解析は入れているが、数字を見ても次に何をすれば良いか分からない</li>
+        <li>外注・制作会社とのやりとりに時間を取られ、本業に集中できていない</li>
+      </ul>
+    </section>
+
+    <section class="compare">
+      <h2>導入前と導入後のイメージ</h2>
+
+      <div class="compare-inner">
+
+        <!-- Before -->
+        <div class="compare-block compare-before">
+          <div class="compare-label">Before（導入前のよくある状態）</div>
+          <ul>
+            <li>
+              <strong>「なんとなく作ったサイト」のまま</strong><br>
+              事業の変化に合わせて内容を更新できておらず、古い情報や分かりにくい導線が残っている。
+            </li>
+            <li>
+              <strong>目的と導線がつながっていない</strong><br>
+              営業・採用・問い合わせなどの目的が整理されておらず、訪問者が「次に何をすれば良いか」分かりにくい。
+            </li>
+            <li>
+              <strong>Webとオフラインがバラバラ</strong><br>
+              営業資料・説明内容とWebサイトのメッセージが統一されておらず、せっかくの接点が活かしきれていない。
+            </li>
+            <li>
+              <strong>改善の打ち手が定まらない</strong><br>
+              アクセス数やCV数は何となく見ているが、具体的な改善アクションにつながっていない。
+            </li>
+          </ul>
+        </div>
+
+        <!-- After -->
+        <div class="compare-block compare-after">
+          <div class="compare-label after">After（EXPAND支援後のイメージ）</div>
+          <ul>
+            <li>
+              <strong>目的に沿ったサイト構成に整理</strong><br>
+              「誰に・何を伝え・どう動いてもらうか」が明確な構成・導線に整理される。
+            </li>
+            <li>
+              <strong>LPやフォームが“成果”に直結</strong><br>
+              ターゲット・提供価値・訴求ポイントを整理し、CVに繋がるLPやフォームへ改善される。
+            </li>
+            <li>
+              <strong>営業・採用・マーケが一本の線でつながる</strong><br>
+              Webサイト・営業資料・広告・メールなどが連動し、一貫したストーリーで伝えられる。
+            </li>
+            <li>
+              <strong>数字を見ながら改善できる状態に</strong><br>
+              計測設計とレポートの型が整い、「どこを直せば良いか」が分かるようになる。
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="process-flow">
+      <h2>ご支援の流れ</h2>
+
+      <div class="process-steps">
+        <div class="process-step">
+          <div class="step-number">STEP 1</div>
+          <h3>現状ヒアリング・目的整理</h3>
+          <p>
+            事業内容・ターゲット・既存のWebサイトや資料を確認し、<br>
+            「Webで何を達成したいか（営業・採用・認知など）」を整理します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 2</div>
+          <h3>現状サイト・導線・データの分析</h3>
+          <p>
+            既存サイトの構成・導線・コンテンツに加え、<br>
+            アクセス解析やお問い合わせ状況を確認し、課題を可視化します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 3</div>
+          <h3>情報設計・コンテンツ設計</h3>
+          <p>
+            サイトマップ・各ページの役割・訴求ポイントを整理し、<br>
+            ワイヤーフレーム（構成案）やコンテンツ案を作成します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 4</div>
+          <h3>制作・実装</h3>
+          <p>
+            デザイン・コーディング・CMS構築・計測タグ設置など、<br>
+            実際に公開できる状態まで制作を進めます。（既存パートナーとの協業も可能）
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 5</div>
+          <h3>運用・改善サポート</h3>
+          <p>
+            公開後のアクセス・CV状況を確認しながら、<br>
+            コンテンツ追加・導線改善・広告連携などのアップデートを伴走します。
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- 解決策セクション -->
+    <section class="section">
+      <h2>EXPAND が提供すること</h2>
+
+      <h3>1. コーポレートサイト・サービスサイト制作</h3>
+      <p>
+        事業内容・強み・世界観が伝わるコーポレートサイト／サービスサイトを、<br>
+        情報設計からライティング・デザイン・実装までサポートします。
       </p>
-    </div>
-  </section>
 
-  <!-- 課題 -->
-  <section class="section">
-    <h2>こんなお悩みはありませんか？</h2>
-    <ul>
-      <li>今のホームページが古く、会社の魅力を十分に伝えられていない</li>
-      <li>問い合わせ数が少なく、「名刺代わり」で終わってしまっている</li>
-      <li>SEO や広告、SNS を試してみたが、効果がよく分からない</li>
-      <li>そもそも何から手をつければよいか分からない</li>
-      <li>制作会社とのやり取りに時間を取られ、本業に集中できない</li>
-    </ul>
-  </section>
+      <h3>2. LP（ランディングページ）・フォーム最適化</h3>
+      <p>
+        資料請求・問い合わせ・採用エントリーなど、<br>
+        目的に合わせたLPやフォームの設計・改善を行い、コンバージョン率向上を目指します。
+      </p>
 
-  <!-- 解決策 -->
-  <section class="section">
-    <h2>EXPAND ができること</h2>
+      <h3>3. コンテンツ設計・SEO・オウンドメディア支援</h3>
+      <p>
+        ターゲットが知りたい情報・検索キーワードをもとに、<br>
+        記事構成・コンテンツ企画・SEOの基本設計を支援します。
+      </p>
 
-    <h3>1. 目的とターゲットを明確にしたサイト設計</h3>
-    <p>
-      「誰に・何を伝え・どんな行動をしてほしいのか」を整理し、<br>
-      目的に合ったサイト構成・導線を設計します。
-    </p>
+      <h3>4. 広告・メール・営業資料との連動設計</h3>
+      <p>
+        Web広告・メール・営業資料などと連携した導線を設計し、<br>
+        「出会い～商談～受注」まで一貫したコミュニケーションを構築します。
+      </p>
+    </section>
 
-    <h3>2. コーポレートサイト制作</h3>
-    <p>
-      デザイン、コピー、構成を含めてトータルでサポートします。<br>
-      WordPress / 静的HTML / Notion など、ご要望と運用体制に合わせて構築方法を選定します。
-    </p>
+    <section class="crm-layout">
+      <h2>Web制作・マーケティング支援後のイメージ</h2>
 
-    <h3>3. SEO・コンテンツ設計</h3>
-    <p>
-      検索ニーズの調査を行い、狙うべきキーワードとコンテンツの方向性を整理。<br>
-      内部対策や構造設計も含めて、検索されやすい土台をつくります。
-    </p>
+      <div class="crm-grid">
+        <div class="crm-card">
+          <h3>サイトマップ・導線設計図</h3>
+          <p>
+            サイト全体の構成や導線が図で整理され、<br>
+            どのページからどのアクションにつなげるかが明確になります。
+          </p>
+          <ul class="crm-ui">
+            <li class="bar"></li>
+            <li class="bar short"></li>
+            <li class="bar"></li>
+          </ul>
+        </div>
 
-    <h3>4. 広告・SNSを含めたマーケティング支援</h3>
-    <p>
-      必要に応じて、Google広告やMeta広告、SNS運用の方針づくりも支援します。<br>
-      「とりあえず出す」のではなく、数字を見ながら小さく検証していくスタイルです。
-    </p>
-  </section>
+        <div class="crm-card">
+          <h3>成果指標ダッシュボード</h3>
+          <p>
+            アクセス数・CV数・主要流入経路など、<br>
+            重要指標を一画面で確認できるレポートやダッシュボードが整います。
+          </p>
+          <ul class="crm-ui columns">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
 
-  <!-- ステップ -->
-  <section class="section">
-    <h2>ご支援の流れ</h2>
-    <ol>
-      <li>現状サイト・集客状況のヒアリング</li>
-      <li>目的・ターゲット・競合の整理</li>
-      <li>サイト構成案・ワイヤーフレームの作成</li>
-      <li>デザイン・コピー制作</li>
-      <li>実装・テスト・公開</li>
-      <li>公開後の改善提案（アクセス解析を含む）</li>
-    </ol>
-  </section>
+        <div class="crm-card">
+          <h3>改善サイクルの定例ミーティング</h3>
+          <p>
+            指標を見ながら「次の一手」を決める場ができ、<br>
+            Webがじわじわと強くなっていくサイクルが回り始めます。
+          </p>
+          <ul class="crm-ui">
+            <li class="line"></li>
+            <li class="line"></li>
+            <li class="line"></li>
+          </ul>
+        </div>
+      </div>
 
-  <!-- 効果 -->
-  <section class="section">
-    <h2>期待できる効果</h2>
-    <ul>
-      <li>自社の強みや価値が、初めての方にも分かりやすく伝わる</li>
-      <li>問い合わせや資料請求など、具体的なアクションが増える</li>
-      <li>営業前の「第一印象」を整えられることで、商談がスムーズになる</li>
-      <li>Web・デジタルまわりの方針が整理され、迷いが減る</li>
-    </ul>
-  </section>
+      <p class="crm-note">
+        ※ デザイン・実装は既存の制作パートナー様との協業や、<br>
+        御社側での制作体制に合わせた関わり方も柔軟に調整可能です。
+      </p>
+    </section>
 
-  <nav class="service-nav">
-  <a href="service-crm.html">営業支援・CRM / MA構築</a>
-  <a href="service-dx.html">業務設計・DX推進</a>
-  <a href="service-education.html">教育・人材育成プログラム</a>
-  <a href="service-web.html" class="active">Web制作・マーケティング支援</a>
-　</nav>
+    <!-- 導入ステップ -->
+    <section class="section">
+      <h2>導入ステップ</h2>
+      <ol>
+        <li>現状ヒアリング（事業内容・ターゲット・既存Webの把握）</li>
+        <li>目的・KPI・ターゲットユーザーの整理</li>
+        <li>サイトマップ・情報設計・ワイヤーフレームの作成</li>
+        <li>デザイン・コーディング・計測設定</li>
+        <li>公開後のデータ確認・改善提案</li>
+        <li>継続的な運用・マーケティング施策の伴走支援</li>
+      </ol>
+    </section>
 
-  <!-- CTA -->
-  <section class="cta">
-    <p>新規制作・リニューアル・部分的な改善など、まずはお気軽にご相談ください。</p>
-    <a href="contact.html" class="btn">Web・マーケティングの相談をする</a>
-  </section>
-</main>
+    <!-- 効果セクション -->
+    <section class="section">
+      <h2>導入後に期待できること</h2>
+      <ul>
+        <li>自社の強みが分かりやすく伝わるWebサイトになり、第一印象が向上する</li>
+        <li>営業・採用・問い合わせなど、目的に合った導線が整い、CV数の増加が期待できる</li>
+        <li>広告・メール・営業活動との連動により、Webが「点」ではなく「線」で活用できるようになる</li>
+        <li>アクセス解析やレポートをもとに、改善の打ち手を検討できるようになる</li>
+        <li>社内に「Webを活用していく文化」が少しずつ根づき、資産としてのサイト価値が高まる</li>
+      </ul>
+    </section>
+
+    <nav class="service-nav">
+      <a href="service-crm.html">営業支援・CRM / MA構築</a>
+      <a href="service-dx.html">業務設計・DX推進</a>
+      <a href="service-education.html">教育・人材育成プログラム</a>
+      <a href="service-web.html" class="active">Web制作・マーケティング支援</a>
+    </nav>
+
+    <!-- CTA -->
+    <section class="cta">
+      <p>自社のWebサイト・LP・マーケティング施策について、一度整理してみたい場合はお気軽にご相談ください。</p>
+      <a href="contact.html" class="btn">無料相談を申し込む</a>
+    </section>
+  </main>
 
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="foot-brand">
-       <!--
+        <!--
         <img src="assets/logo.png" alt="" class="logo small">
         <span>EXPAND Co., Ltd.</span>
         -->
@@ -136,3 +292,4 @@
   </footer>
 </body>
 </html>
+
