--- a/contact.html
+++ b/contact.html
@@ -4,48 +4,76 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>お問い合わせ | 株式会社EXPAND</title>
+  <meta name="description" content="サービスに関するご相談・お問い合わせは、こちらのフォームよりお気軽にご連絡ください。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css?v=3">
 </head>
+
 <body>
-  <header class="site-header">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
-    <!--
-      <span class="brand-text">EXPAND</span>
-      -->
-    </a>
-    <nav class="nav">
-      <a href="index.html">ホーム</a>
+<header class="site-header">
+  <a class="brand" href="index.html">
+    <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
+  </a>
+  <nav class="nav">
+    <a href="index.html">ホーム</a>
+    <a href="about.html">会社概要</a>
+    <a href="contact.html" class="btn small active">お問い合わせ</a>
+  </nav>
+</header>
+
+<main>
+
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-inner">
+      <h1>お問い合わせ</h1>
+      <p class="lead">
+        サービスに関するご相談・お見積り・ご質問は、<br>
+        下記フォームよりお気軽にご連絡ください。
+      </p>
+    </div>
+  </section>
+
+  <!-- Google Form 埋め込み -->
+  <section class="section">
+    <h2>お問い合わせフォーム</h2>
+    <p>必要事項をご入力のうえ、送信ボタンを押してください。</p>
+
+    <div class="form-wrapper">
+      <!-- ▼ここに発行したGoogleフォームの埋め込みタグを入れる ▼ -->
+      <iframe
+        src="【あなたのGoogleフォームURL】?embedded=true"
+        width="100%"
+        height="900"
+        frameborder="0"
+        marginheight="0"
+        marginwidth="0"
+        style="border: none; background: #fff;"
+      >
+        読み込んでいます…
+      </iframe>
+    </div>
+  </section>
+
+  <!-- CTA (任意) -->
+  <section class="cta">
+    <p>ご相談内容がまとまっていない段階でも、お気軽にお問い合わせください。</p>
+    <a href="index.html" class="btn">トップページへ戻る</a>
+  </section>
+
+</main>
+
+<footer class="site-footer">
+  <div class="footer-inner">
+    <div class="foot-links">
       <a href="about.html">会社概要</a>
-      <a href="contact.html" class="btn small active">お問い合わせ</a>
-    </nav>
-  </header>
-
-  <main class="section">
-    <h1>お問い合わせ</h1>
-    <p>ご相談はメールまたはフォームから承ります。内容を確認のうえ、担当よりご連絡します。</p>
-    <div class="contact-box">
-      <p>📧 <a href="mailto:info@fs-expand.co.jp">info@fs-expand.co.jp</a></p>
-      <p>📝 <a href="https://forms.gle/" target="_blank" rel="noopener">Googleフォームで送信</a></p>
+      <a href="contact.html">お問い合わせ</a>
+      <a href="#">プライバシーポリシー</a>
     </div>
-    <p class="small">※ 営業目的のご連絡にはご回答できない場合があります。</p>
-  </main>
+  </div>
+  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
+</footer>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div class="foot-brand">
-       <!--
-        <img src="assets/logo.png" alt="" class="logo small">
-        <span>EXPAND Co., Ltd.</span>
-        -->
-      </div>
-      <div class="foot-links">
-        <a href="about.html">会社概要</a>
-        <a href="contact.html">お問い合わせ</a>
-      </div>
-    </div>
-    <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
-  </footer>
 </body>
 </html>
+
