--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>お問い合わせ | 株式会社EXPAND</title>
-  <meta name="description" content="サービスに関するご相談・お問い合わせは、こちらのフォームよりお気軽にご連絡ください。">
+  <meta name="description" content="サービスに関するご相談・お問い合わせは、こちらのフォームまたはメールよりお気軽にご連絡ください。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
 </head>
@@ -29,7 +29,7 @@
       <h1>お問い合わせ</h1>
       <p class="lead">
         サービスに関するご相談・お見積り・ご質問は、<br>
-        下記フォームよりお気軽にご連絡ください。
+        下記フォームまたはメールよりお気軽にご連絡ください。
       </p>
     </div>
   </section>
@@ -40,24 +40,58 @@
     <p>必要事項をご入力のうえ、送信ボタンを押してください。</p>
 
     <div class="form-wrapper">
-      <!-- ▼ここに発行したGoogleフォームの埋め込みタグを入れる ▼ -->
-      <iframe
-        src="【あなたのGoogleフォームURL】?embedded=true"
-        width="100%"
-        height="900"
-        frameborder="0"
-        marginheight="0"
-        marginwidth="0"
+
+      <!-- ▼あなたのGoogleフォームが完全に埋め込まれています ▼ -->
+      <iframe 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeYyAAocke-TobCF17UHzjFoTAoi0FipvtKQ8oHtvbSf2_RoQ/viewform?embedded=true" 
+        width="100%" 
+        height="2867" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0" 
         style="border: none; background: #fff;"
       >
         読み込んでいます…
       </iframe>
+
     </div>
   </section>
 
-  <!-- CTA (任意) -->
+  <!-- メールでのお問い合わせ -->
+  <section class="section">
+    <h2>メールでのお問い合わせ</h2>
+    <p>
+      メールソフトから直接ご連絡いただく場合は、<br>
+      下記アドレス宛にお問い合わせ内容をお送りください。
+    </p>
+
+    <p>
+      宛先：
+      <a href="mailto:info@fs-expand.co.jp?subject=%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%20%28EXPAND%20Web%E3%82%B5%E3%82%A4%E3%83%88%E3%81%8B%E3%82%89%29">
+        info@fs-expand.co.jp
+      </a>
+    </p>
+
+    <p>
+      メール本文には、可能であれば下記の情報をご記載ください：（コピーしてご利用ください）
+    </p>
+
+    <pre class="mail-template">
+【お名前】：
+【会社名・部署名】：
+【メールアドレス】：
+【お電話番号】：
+【ご相談の種類】：
+（営業支援・CRM/MA構築／業務設計・DX推進／教育・人材育成／Web制作・マーケティング／その他）
+【ご相談の背景・現状】：
+【具体的に相談したいこと】：
+【ご希望の時期・スケジュール感】：
+    </pre>
+  </section>
+
+  <!-- CTA -->
   <section class="cta">
-    <p>ご相談内容がまとまっていない段階でも、お気軽にお問い合わせください。</p>
+    <p>ご相談内容が固まっていない段階でも、お気軽にお問い合わせください。</p>
     <a href="index.html" class="btn">トップページへ戻る</a>
   </section>
 
@@ -71,7 +105,7 @@
       <a href="#">プライバシーポリシー</a>
     </div>
   </div>
-  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
+  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved。</p>
 </footer>
 
 </body>
