--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
 
     <div class="form-wrapper">
 
-      <!-- ▼あなたのGoogleフォームが完全に埋め込まれています ▼ -->
+      <!-- ▼あなたのGoogleフォーム（新URL）に差し替え済み ▼ -->
       <iframe 
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeYyAAocke-TobCF17UHzjFoTAoi0FipvtKQ8oHtvbSf2_RoQ/viewform?embedded=true" 
-        width="100%" 
-        height="2867" 
-        frameborder="0" 
-        marginheight="0" 
-        marginwidth="0" 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeYyAAocke-TobCF17UHzjFoTAoi0FipvtKQ8oHtvbSf2_RoQ/viewform?embedded=true"
+        width="100%"
+        height="2867"
+        frameborder="0"
+        marginheight="0"
+        marginwidth="0"
         style="border: none; background: #fff;"
       >
         読み込んでいます…
@@ -73,7 +73,7 @@
     </p>
 
     <p>
-      メール本文には、可能であれば下記の情報をご記載ください：（コピーしてご利用ください）
+      メール本文には、可能であれば下記の情報をご記載ください。（コピーしてご利用ください）
     </p>
 
     <pre class="mail-template">
