--- a/contact.html
+++ b/contact.html
@@ -34,47 +34,43 @@
     </div>
   </section>
 
-  <!-- Google Form 埋め込み -->
+  <!-- Google Form 外部リンク表示 -->
   <section class="section">
     <h2>お問い合わせフォーム</h2>
-    <p>必要事項をご入力のうえ、送信ボタンを押してください。</p>
+    <p>下記ボタンより、Googleフォームに移動してご入力ください。</p>
 
-    <div class="form-wrapper">
-
-      <!-- ▼あなたのGoogleフォーム（新URL）に差し替え済み ▼ -->
-      <iframe 
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeYyAAocke-TobCF17UHzjFoTAoi0FipvtKQ8oHtvbSf2_RoQ/viewform?embedded=true"
-        width="100%"
-        height="2867"
-        frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        style="border: none; background: #fff;"
+    <div style="text-align:center; margin-top:30px;">
+      <a 
+        href="https://docs.google.com/forms/d/e/1FAIpQLSeYyAAocke-TobCF17UHzjFoTAoi0FipvtKQ8oHtvbSf2_RoQ/viewform?usp=dialog"
+        target="_blank"
+        class="btn"
+        style="padding:14px 32px; font-size:18px;"
       >
-        読み込んでいます…
-      </iframe>
-
+        お問い合わせフォームを開く
+      </a>
     </div>
+
+    <p style="text-align:center; margin-top:16px; font-size:14px; opacity:0.8;">
+      ※ 新しいタブが開きます
+    </p>
   </section>
 
   <!-- メールでのお問い合わせ -->
   <section class="section">
     <h2>メールでのお問い合わせ</h2>
     <p>
-      メールソフトから直接ご連絡いただく場合は、<br>
+      メールから直接ご連絡いただく場合は、<br>
       下記アドレス宛にお問い合わせ内容をお送りください。
     </p>
 
     <p>
       宛先：
-      <a href="mailto:info@fs-expand.co.jp?subject=%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%20%28EXPAND%20Web%E3%82%B5%E3%82%A4%E3%83%88%E3%81%8B%E3%82%89%29">
+      <a href="mailto:info@fs-expand.co.jp">
         info@fs-expand.co.jp
       </a>
     </p>
 
-    <p>
-      メール本文には、可能であれば下記の情報をご記載ください。（コピーしてご利用ください）
-    </p>
+    <p>以下をコピーしてご利用ください：</p>
 
     <pre class="mail-template">
 【お名前】：
@@ -105,7 +101,7 @@
       <a href="#">プライバシーポリシー</a>
     </div>
   </div>
-  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved。</p>
+  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
 </footer>
 
 </body>
