--- a/about.html
+++ b/about.html
@@ -66,10 +66,13 @@
         <span>EXPAND Co., Ltd.</span>
         -->
       </div>
-      <div class="foot-links">
-        <a href="about.html">会社概要</a>
-        <a href="contact.html">お問い合わせ</a>
-      </div>
+      
+  <div class="foot-links">
+      <a href="about.html">会社概要</a>
+      <a href="contact.html">お問い合わせ</a>
+      <a href="privacy.html">プライバシーポリシー</a>
+    </div>
+
     </div>
     <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
   </footer>
