--- a/privacy.html
+++ b/privacy.html
@@ -142,7 +142,7 @@
       <p>
         株式会社EXPAND<br>
         Email：<a href="mailto:info@fs-expand.co.jp">info@fs-expand.co.jp</a><br>
-        （所在地などを追記する場合はここに記載）
+        所在地：東京都中央区銀座1-22-11
       </p>
     </section>
 
