--- a/about.html
+++ b/about.html
@@ -68,9 +68,10 @@
       </div>
       
   <div class="foot-links">
-      <a href="about.html">会社概要</a>
-      <a href="contact.html">お問い合わせ</a>
-      <a href="privacy.html">プライバシーポリシー</a>
+  <a href="about.html">会社概要</a>
+  <a href="contact.html">お問い合わせ</a>
+  <a href="privacy.html">プライバシーポリシー</a>
+  <a href="terms.html">サイト利用規約</a>
     </div>
 
     </div>
