--- a/contact.html
+++ b/contact.html
@@ -96,10 +96,12 @@
 <footer class="site-footer">
   <div class="footer-inner">
     <div class="foot-links">
-      <a href="about.html">会社概要</a>
-      <a href="contact.html">お問い合わせ</a>
-      <a href="#">プライバシーポリシー</a>
+  <a href="about.html">会社概要</a>
+  <a href="contact.html">お問い合わせ</a>
+  <a href="privacy.html">プライバシーポリシー</a>
+  <a href="terms.html">サイト利用規約</a>
     </div>
+    
   </div>
   <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
 </footer>
