--- a/about.html
+++ b/about.html
@@ -67,7 +67,9 @@
         -->
       </div>
       
-  <div class="foot-links">
+  <footer class="site-footer">
+  <div class="footer-inner">
+    <div class="foot-links">
   <a href="about.html">会社概要</a>
   <a href="contact.html">お問い合わせ</a>
   <a href="privacy.html">プライバシーポリシー</a>
