--- a/service-education.html
+++ b/service-education.html
@@ -281,12 +281,15 @@
         <img src="assets/logo.png" alt="" class="logo small">
         <span>EXPAND Co., Ltd.</span>
         -->
-      </div>
+      </div> 
+      
   <div class="foot-links">
-      <a href="about.html">会社概要</a>
-      <a href="contact.html">お問い合わせ</a>
-      <a href="privacy.html">プライバシーポリシー</a>
-     </div>
+     <a href="about.html">会社概要</a>
+     <a href="contact.html">お問い合わせ</a>
+     <a href="privacy.html">プライバシーポリシー</a>
+     <a href="terms.html">サイト利用規約</a>
+      </div>
+      
     </div>
     <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
   </footer>
