--- a/service-web.html
+++ b/service-web.html
@@ -282,11 +282,14 @@
         <span>EXPAND Co., Ltd.</span>
         -->
       </div>
+      
   <div class="foot-links">
-      <a href="about.html">会社概要</a>
-      <a href="contact.html">お問い合わせ</a>
-      <a href="privacy.html">プライバシーポリシー</a>
-     </div>
+     <a href="about.html">会社概要</a>
+     <a href="contact.html">お問い合わせ</a>
+     <a href="privacy.html">プライバシーポリシー</a>
+     <a href="terms.html">サイト利用規約</a>
+      </div>
+      
     </div>
     <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
   </footer>
