--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2TS3LVZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  
   <header class="site-header">
    <a class="brand" href="index.html">
       <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
