--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>株式会社EXPAND | 人とテクノロジーで未来を拓く</title>
-  <meta name="description" content="株式会社EXPANDは、人とテクノロジーの力で挑戦を実行に変え、確かな未来を共創します。営業支援、業務改善、教育、マーケティングまでワンストップで支援。">
+　<title>株式会社EXPAND | 営業支援・DX推進・人材育成の伴走型コンサルティング</title>
+　<meta name="description" content="株式会社EXPANDは、営業支援・DX推進・人材育成を中心に、企業の成長を実行レベルで支援する伴走型コンサルティング企業です。現場に寄り添い、仕組みづくりから運用まで一気通貫でサポートします。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="株式会社EXPAND | 人とテクノロジーで未来を拓く">
