--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>会社概要 | 株式会社EXPAND</title>
+  <title>株式会社EXPANDについて | 伴走型コンサルティング・営業支援・DX推進</title>
+  <meta name="description" content="株式会社EXPANDの会社概要。営業支援、DX推進、人材育成を軸に“実行に強いコンサルティング”を提供しています。企業の課題解決に寄り添い、成果が出るまで伴走します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css" />
 </head>
