--- a/service-crm.html
+++ b/service-crm.html
@@ -11,8 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>営業支援・CRM / MA構築 | 株式会社EXPAND</title>
-　<meta name="description" content="営業支援・CRM / MA構築サービスのご紹介。顧客情報の一元管理、営業プロセスの可視化、自動フォローの仕組みづくりまで、成果が出るまで伴走します。">
+  <title>営業支援・CRM/MA構築支援 | 株式会社EXPAND</title>
+  <meta name="description" content="営業支援からCRM/MAの導入・構築まで、成果につながる仕組みを一気通貫で支援。営業プロセスの見える化と自動化で売上向上を実現します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="営業支援・CRM / MA構築 | 株式会社EXPAND">
