--- a/service-dx.html
+++ b/service-dx.html
@@ -11,8 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>業務設計・DX推進 | 株式会社EXPAND</title>
-  <meta name="description" content="業務設計・DX推進サービスのご紹介。業務フローの可視化・標準化、ツール連携・自動化、DXロードマップの設計・定着まで、現場に根づく仕組みづくりを伴走支援します。">
+  <title>業務改善・DX推進コンサルティング | 株式会社EXPAND</title>
+  <meta name="description" content="業務の見える化・標準化・自動化を通じて、生産性向上とムダ削減を実現。現場に寄り添い実行支援まで行う伴走型のDXコンサルティングです。"> 
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="業務設計・DX推進 | 株式会社EXPAND">
