--- a/service-education.html
+++ b/service-education.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>教育・人材育成プログラム | 株式会社EXPAND</title>
-  <meta name="description" content="教育・人材育成プログラムのご紹介。現場で成果につながる営業教育・DXリテラシー向上・マネジメント研修などを、実務に即した形で設計・伴走支援します。">
+  <meta name="description" content="現場実務に直結する研修プログラムとオンボーディング支援で、“自走できる人材”を育成。仕組み化と運用定着まで伴走します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="教育・人材育成プログラム | 株式会社EXPAND">
