--- a/service-web.html
+++ b/service-web.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Web制作・マーケティング支援 | 株式会社EXPAND</title>
-  <meta name="description" content="Web制作・マーケティング支援サービスのご紹介。コーポレートサイト・LP制作から、導線設計・SEO・広告運用・分析まで、“成果につながるWeb活用”を一気通貫で伴走します。">
+  <meta name="description" content="コーポレートサイト制作からSEO・広告運用まで、集客から商談化までを一気通貫で支援するWebマーケティングサービスです。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="Web制作・マーケティング支援 | 株式会社EXPAND">
