--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>お問い合わせ | 株式会社EXPAND</title>
-  <meta name="description" content="サービスに関するご相談・お問い合わせは、こちらのフォームまたはメールよりお気軽にご連絡ください。">
+  <meta name="description" content="株式会社EXPANDへのお問い合わせはこちら。営業支援・DX推進・人材育成など、貴社の課題に合わせて最適な支援をご提案します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
 </head>
