--- a/thanks.html
+++ b/thanks.html
@@ -11,8 +11,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>お問い合わせありがとうございます | 株式会社EXPAND</title>
-  <meta name="description" content="お問い合わせありがとうございます。担当者より2営業日以内にご連絡いたします。">
+  <title>お問い合わせ完了 | 株式会社EXPAND</title>
+  <meta name="description" content="お問い合わせありがとうございます。担当者よりご連絡いたします。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
 </head>
