--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html lang="ja">
+<!DOCTYPE html>
+<html lang="ja">
 <head>
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W2TS3LVZ');</script>
-<!-- End Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W2TS3LVZ');</script>
+  <!-- End Google Tag Manager -->
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-　<title>株式会社EXPAND | 営業支援・DX推進・人材育成の伴走型コンサルティング</title>
-　<meta name="description" content="株式会社EXPANDは、営業支援・DX推進・人材育成を中心に、企業の成長を実行レベルで支援する伴走型コンサルティング企業です。現場に寄り添い、仕組みづくりから運用まで一気通貫でサポートします。">
+
+  <title>株式会社EXPAND | 営業支援・DX推進・人材育成の伴走型コンサルティング</title>
+  <meta name="description" content="株式会社EXPANDは、営業支援・DX推進・人材育成を中心に、企業の成長を実行レベルで支援する伴走型コンサルティング企業です。現場に寄り添い、仕組みづくりから運用まで一気通貫でサポートします。">
+
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="css/styles.css?v=3">
+
+  <!-- GTM への接続を事前に確立（小さな最適化） -->
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+
+  <!-- CSS をブロッキングしない形で読み込み -->
+  <link rel="preload" href="css/styles.css?v=3" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/styles.css?v=3"></noscript>
+
   <meta property="og:title" content="株式会社EXPAND | 人とテクノロジーで未来を拓く">
   <meta property="og:description" content="挑戦に寄り添い実行し、確かな未来を実現します。">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://fs-expand.co.jp/">
+  <meta property="og:url" content="https://www.fs-expand.co.jp/">
 </head>
+
 <body>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2TS3LVZ"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2TS3LVZ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
-     <!--
-      <span class="brand-text">EXPAND</span>
-      -->
+      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
     </a>
     <nav class="nav">
       <a href="index.html">ホーム</a>
@@ -39,6 +49,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="contact.html" class="btn small">お問い合わせ</a>
     </nav>
   </header>
+  ...
 
   <section class="hero">
     <div class="hero-inner">
