--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!DOCTYPE html>
-<html lang="ja">
 <head>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -23,9 +21,8 @@
   <link rel="preconnect" href="https://www.googletagmanager.com">
   <link rel="dns-prefetch" href="https://www.googletagmanager.com">
 
-  <!-- CSS をブロッキングしない形で読み込み -->
-  <link rel="preload" href="css/styles.css?v=3" as="style" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="css/styles.css?v=3"></noscript>
+  <!-- ★ CSS：揺らぎをなくすため普通に読み込む -->
+  <link rel="stylesheet" href="css/styles.css?v=4">
 
   <meta property="og:title" content="株式会社EXPAND | 人とテクノロジーで未来を拓く">
   <meta property="og:description" content="挑戦に寄り添い実行し、確かな未来を実現します。">
