--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
   <!-- End Google Tag Manager (noscript) -->
   
   <header class="site-header">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
-    </a>
-    <nav class="nav">
-      <a href="index.html">ホーム</a>
-      <a href="about.html">会社概要</a>
-      <a href="contact.html" class="btn small">お問い合わせ</a>
-    </nav>
-  </header>
-
+  <a class="brand" href="/">
+    <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
+  </a>
+  <nav class="nav">
+    <a href="/">ホーム</a>
+    <a href="/about.html">会社概要</a>
+    <a href="/contact.html" class="btn small">お問い合わせ</a>
+  </nav>
+　</header>
 
   <section class="hero">
     <div class="hero-inner">
