--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
 <header class="site-header">
-  <a class="brand" href="index.html">
-    <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
+  <a class="brand" href="/">
+    <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
   </a>
   <nav class="nav">
-    <a href="index.html">ホーム</a>
-    <a href="about.html">会社概要</a>
-    <a href="contact.html" class="btn small active">お問い合わせ</a>
+    <a href="/">ホーム</a>
+    <a href="/about.html">会社概要</a>
+    <a href="/contact.html" class="btn small">お問い合わせ</a>
   </nav>
 </header>
+
 
 <main>
 
