--- a/about.html
+++ b/about.html
@@ -23,18 +23,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
   <header class="site-header">
-   <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
-   <!--
-      <span class="brand-text">EXPAND</span>
-      -->
-    </a>
-    <nav class="nav">
-      <a href="index.html">ホーム</a>
-      <a href="about.html" class="active">会社概要</a>
-      <a href="contact.html" class="btn small">お問い合わせ</a>
-    </nav>
-  </header>
+  <a class="brand" href="/">
+    <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
+  </a>
+  <nav class="nav">
+    <a href="/">ホーム</a>
+    <a href="/about.html">会社概要</a>
+    <a href="/contact.html" class="btn small">お問い合わせ</a>
+  </nav>
+　</header>
 
   <main class="section">
     <h1>会社概要</h1>
