--- a/about.html
+++ b/about.html
@@ -28,10 +28,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </a>
   <nav class="nav">
     <a href="/">ホーム</a>
-    <a href="/about.html">会社概要</a>
+    <a href="/about.html" class="active">会社概要</a>
     <a href="/contact.html" class="btn small">お問い合わせ</a>
   </nav>
-　</header>
+</header>
+
 
   <main class="section">
     <h1>会社概要</h1>
