--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="preconnect" href="https://www.googletagmanager.com">
   <link rel="dns-prefetch" href="https://www.googletagmanager.com">
 
-  <!-- ★ CSS：揺らぎをなくすため普通に読み込む -->
+  <!-- CSS 読み込み -->
   <link rel="stylesheet" href="css/styles.css?v=4">
 
   <meta property="og:title" content="株式会社EXPAND | 人とテクノロジーで未来を拓く">
@@ -37,15 +37,15 @@
   <!-- End Google Tag Manager (noscript) -->
   
   <header class="site-header">
-  <a class="brand" href="/">
-    <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
-  </a>
-  <nav class="nav">
-    <a href="/">ホーム</a>
-    <a href="/about.html">会社概要</a>
-    <a href="/contact.html" class="btn small">お問い合わせ</a>
-  </nav>
-　</header>
+    <a class="brand" href="/">
+      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
+    </a>
+    <nav class="nav">
+      <a href="/">ホーム</a>
+      <a href="/about.html">会社概要</a>
+      <a href="/contact.html" class="btn small">お問い合わせ</a>
+    </nav>
+  </header>
 
   <section class="hero">
     <div class="hero-inner">
