--- a/index.html
+++ b/index.html
@@ -48,15 +48,25 @@
   </header>
 
   <section class="hero">
-    <div class="hero-inner">
-      <h1>未来は待つものではなく創るもの。</h1>
-      <p class="lead">人が本気で動くとき、 テクノロジーはその力を何倍にもする。<br>私たちは、 挑戦に寄り添い実行し、 確かな未来を実現します。</p>
-      <div class="hero-ctas">
-        <a href="about.html" class="btn">会社概要</a>
-        <a href="contact.html" class="btn ghost">相談する</a>
-      </div>
-    </div>
-  </section>
+  <div class="hero-inner">
+    <h1 class="hero-title">
+      戦略で終わらせない。<br>
+      成果まで伴走する、実行支援支援コンサルティング。
+    </h1>
+
+    <p class="hero-tagline">frontierspirit</p>
+
+    <p class="hero-subcopy">
+      営業支援・DX推進・CRM/MA運用を、<br>
+      現場と歩みながら、再現性ある成果へつなげる。
+    </p>
+
+    <a href="/contact.html" class="hero-cta">
+      無料相談はこちら
+    </a>
+  </div>
+</section>
+
 <section class="strengths">
   <h2>EXPANDの強み</h2>
 
