--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="hero-inner">
     <h1 class="hero-title">
       戦略で終わらせない。<br>
-      成果まで伴走する、実行支援支援コンサルティング。
+      成果まで伴走する、実行支援コンサルティング。
     </h1>
 
     <p class="hero-tagline">frontierspirit</p>
