--- a/index.html
+++ b/index.html
@@ -67,6 +67,99 @@
   </div>
 </section>
 
+  <!-- Solve：よくある課題 -->
+<section class="section solve" id="solve">
+  <h2>企業の成果を止めている “よくある課題”</h2>
+
+  <div class="solve-cards">
+    <div class="card">
+      <h3>営業活動が属人化し、成果が安定しない。</h3>
+      <p>個人依存の動きが続き、成果の再現性が低い状態。</p>
+    </div>
+    <div class="card">
+      <h3>CRM/MAを入れたものの、“活用できていない”。</h3>
+      <p>ツールが定着せず、データも活かせない状況。</p>
+    </div>
+    <div class="card">
+      <h3>DXや業務改善が進まず、動き出せない。</h3>
+      <p>何から手を付けるべきか分からず、改善が滞る状態。</p>
+    </div>
+  </div>
+
+  <p class="solve-close">
+    これらは自然な停滞です。整理して一緒に動くパートナーが必要になります。
+  </p>
+</section>
+
+  <!-- Value：EXPANDの強み -->
+<section class="section value" id="value">
+  <h2>課題を前に進めるための、EXPANDの4つの強み</h2>
+
+  <div class="value-grid">
+    <div class="value-item">
+      <h3>本質を捉え、課題を整理する力</h3>
+      <p>根本原因から着手ポイントを明確にし、迷いを減らします。</p>
+    </div>
+    <div class="value-item">
+      <h3>現場と伴走し、実行まで進める力</h3>
+      <p>戦略だけで終わらせず、実行の過程を丁寧に支援します。</p>
+    </div>
+    <div class="value-item">
+      <h3>CRM/MA・DXの運用と定着支援</h3>
+      <p>ツール導入だけでなく、継続できる運用設計まで対応。</p>
+    </div>
+    <div class="value-item">
+      <h3>人が変わっても成果が続く仕組み化</h3>
+      <p>誰が担当しても同じ成果が出る状態をつくります。</p>
+    </div>
+  </div>
+
+  <p class="value-close">
+    整理して、伴走して、仕組みにする。EXPANDはこのプロセスを大切にします。
+  </p>
+</section>
+
+  <!-- Service：4つのサービス導線 -->
+<section class="section service" id="service">
+  <h2>EXPANDがお手伝いできること</h2>
+
+  <div class="service-grid">
+    <div class="service-card">
+      <h3>営業支援・CRM/MA活用サポート</h3>
+      <p>営業の仕組み化とCRM/MAの実運用までを支援します。</p>
+      <a href="/service-crm.html">詳細を見る</a>
+    </div>
+
+    <div class="service-card">
+      <h3>DX推進・業務設計サポート</h3>
+      <p>業務の整理から自動化まで、スピード感を持って進めます。</p>
+      <a href="/service-dx.html">詳細を見る</a>
+    </div>
+
+    <div class="service-card">
+      <h3>教育・人材育成プログラム</h3>
+      <p>育成の仕組みづくりから現場定着まで一緒に設計します。</p>
+      <a href="/service-education.html">詳細を見る</a>
+    </div>
+
+    <div class="service-card">
+      <h3>Web制作・マーケティング支援</h3>
+      <p>伝わるサイトと運用設計で、成果につなげます。</p>
+      <a href="/service-web.html">詳細を見る</a>
+    </div>
+  </div>
+</section>
+
+  <!-- CTA：無料相談 -->
+<section class="section cta" id="contact-cta">
+  <h2>まずは、お気軽にご相談ください。</h2>
+  <p class="cta-text">
+    今の状況を伺いながら、課題の整理や動き出すための一歩を一緒につくります。<br>
+    検討段階でも大丈夫です。
+  </p>
+  <a class="btn btn-primary" href="/contact.html">無料相談はこちら</a>
+</section>
+
 <section class="strengths">
   <h2>EXPANDの強み</h2>
 
