--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>飲食店向けライトパッケージ｜EXPAND</title>
   <meta name="description" content="飲食店向けに、今ある“良さ”をやさしく整えて伝わる形にするライトパッケージ。魅力を見つけ、伝わる形にし、また来たくなる流れをつくります。">
-  <link rel="stylesheet" href="css/styles.css?v=1001">
+  <link rel="stylesheet" href="css/styles.css?v=1002">
 </head>
 
 <body class="lp-fnb">
@@ -76,27 +76,36 @@
 
     <div class="lp-fnb-features__items">
 
+      <!-- ブロック① -->
       <div class="lp-fnb-features__item">
         <h3>① あなた自身も気づいていない「魅力」をみつける</h3>
         <p>
           まずは、お店についてゆっくりお話を聞かせてください。<br>
-          会話の中から「ここが好きになるポイントだ」と思える魅力を一緒に見つけていきます。
+          どんな想いで始めたのか、どんなお客さまが多いのか、どんな時に「やっていてよかった」と感じるのか。<br><br>
+          会話の中から、あなたにとっては「あたり前」になっているけれど、<br>
+          お客さまにとっては「ここが好きになるポイントだ」と思える魅力を、一緒に見つけていきます。
         </p>
       </div>
 
+      <!-- ブロック② -->
       <div class="lp-fnb-features__item">
         <h3>② その魅力が「より伝わる見せ方」に整える</h3>
         <p>
-          メニューの見せ方や写真、SNS・ホームページの一言など。<br>
-          「ここ良さそう」と感じてもらえる工夫を一緒に整えます。
+          見つけた魅力を、そのままにしておくのはもったいないです。<br>
+          メニュー表の言葉や並べ方、写真の見せ方、SNSやホームページの一言など。<br><br>
+          ちょっとした「見せ方」を整えるだけで、<br>
+          お客さまが「ここ良さそう」「行ってみたい」と感じるきっかけが増えていきます。
         </p>
       </div>
 
+      <!-- ブロック③ -->
       <div class="lp-fnb-features__item">
         <h3>③ 「また来たくなる流れ」をやさしくつくる</h3>
         <p>
-          LINE配信、次回来店のご案内、小さなメッセージなど。<br>
-          無理なく続けられる形で「常連さん」が増える流れを作ります。
+          一度来てくれたお客さまに、「また来たい」と思ってもらえるしくみを、少しずつつくります。<br><br>
+          たとえば、LINEの簡単な配信、次回来店のご案内、小さなひと言メッセージなど。<br><br>
+          大きなシステムではなく、無理なく続けられる形で、<br>
+          「常連さん」が少しずつ増えていく流れを一緒に作っていきます。
         </p>
       </div>
 
@@ -115,22 +124,22 @@
       <div class="lp-fnb-future__col">
         <h3>Before</h3>
         <ul>
-          <li>何から手をつければいいか分からない</li>
-          <li>メニューや写真を変えたいが後回し</li>
-          <li>SNSやLINEが続かない</li>
-          <li>リピートがもう一歩伸びない</li>
-          <li>先の見通しが不安</li>
+          <li>「もっと良くできそう」と感じているが、何から手をつければいいか分からない</li>
+          <li>メニューや写真を変えたいけれど、後回しになってしまっている</li>
+          <li>SNSやLINEをやったほうが良いと分かっていても、うまく続かない</li>
+          <li>新規のお客さまはある程度いるが、「リピート」がもう一歩伸びていない</li>
+          <li>売上の山・谷はあるけれど、「この先の見通し」が少し不安</li>
         </ul>
       </div>
 
       <div class="lp-fnb-future__col">
         <h3>After</h3>
         <ul>
-          <li>魅力を言語化でき「うちはこういう店です」と伝えやすくなる</li>
-          <li>写真・メニューが整い「選びやすい」という声が増える</li>
-          <li>再来店につながる動きが自然に生まれる</li>
-          <li>新規だけでなく常連が増える</li>
-          <li>来店の見通しが立ちやすくなる</li>
+          <li>お店の「良さ」が言葉や写真で整理され、「うちはこういう店です」と伝えやすくなる</li>
+          <li>メニュー表や写真が見やすくなり、「おいしそう」「選びやすい」という声が増える</li>
+          <li>一度来てくださったお客さまに、「また行こう」と思ってもらえる動きが少しずつ生まれる</li>
+          <li>新規のお客さまだけでなく、「常連さん」が着実に増えてくる</li>
+          <li>「どのくらい来店がありそうか」の感覚がつかめてきて、先の見通しが立てやすくなる</li>
         </ul>
       </div>
 
@@ -155,7 +164,7 @@
         <h3>プランA｜まずは成果報酬で試したい方向け</h3>
         <ul>
           <li>初期費用：0円</li>
-          <li>成果報酬：売上アップ分の 10〜20％</li>
+          <li>成果報酬：売上アップ分の 10〜20％（目安・3ヶ月間）</li>
         </ul>
       </div>
 
@@ -191,11 +200,15 @@
     <div class="lp-fnb-cases__block">
       <h3>居酒屋さんの例（カウンター8席＋テーブル2卓）</h3>
       <p>
-        「新しいお客さまにも、もっと来てほしい」というご相談。<br>
+        地元の常連さんに愛されている居酒屋さんでしたが、<br>
+        「新しいお客さまにも、もっと来てほしい」というご相談をいただきました。<br><br>
+        そこで、<br><br>
         ・看板メニューの写真を撮り直し<br>
         ・メニュー表の言葉と並び順を整理<br>
-        ・Instagramで週1回「今日の一品」を発信<br><br>
-        その結果、新規来店数が 20〜30％ほど増えました。
+        ・Instagramで週1回だけ「今日の一品」を発信<br><br>
+        といった、小さな見直しを一緒に行いました。<br><br>
+        その結果、3ヶ月で新規来店数が 20〜30％ほど増え、<br>
+        「Instagramを見て来ました」というお客さまの声も増えてきました。
       </p>
     </div>
   </section>
@@ -209,17 +222,26 @@
 
     <div class="lp-fnb-faq__item">
       <h3>Q. SNSが苦手でも大丈夫ですか？</h3>
-      <p>A. 大丈夫です。やさしく続けられる形でサポートします。</p>
+      <p>
+        A. 大丈夫です。写真や文章が苦手な方でも進められるように、<br>
+        「これだけやればOK」という形でサポートします。
+      </p>
     </div>
 
     <div class="lp-fnb-faq__item">
       <h3>Q. 忙しくて時間がとれません…</h3>
-      <p>A. 営業に支障が出ないよう、無理のない範囲で進めます。</p>
+      <p>
+        A. 負担が少ない形で進めます。<br>
+        営業に支障が出ないよう、できる範囲で一緒に進めていきます。
+      </p>
     </div>
 
     <div class="lp-fnb-faq__item">
       <h3>Q. 相談だけでもできますか？</h3>
-      <p>A. はい、できます。話してから決めていただけます。</p>
+      <p>
+        A. はい、できます。<br>
+        お話を聞いたあとに「やる／やらない」を決めていただいて構いません。
+      </p>
     </div>
 
   </section>
@@ -242,7 +264,6 @@
       無料で相談する
     </a>
   </section>
-
 
 </body>
 </html>
