--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -6,6 +6,15 @@
   <title>飲食店向けライトパッケージ｜EXPAND</title>
   <meta name="description" content="飲食店向けに、今ある“良さ”をやさしく整えて伝わる形にするライトパッケージ。魅力を見つけ、伝わる形にし、また来たくなる流れをつくります。">
   <link rel="stylesheet" href="css/styles.css?v=1002">
+
+  <!-- LP-FNB 専用の字間リセット -->
+  <style>
+    body.lp-fnb,
+    body.lp-fnb * {
+      letter-spacing: 0.05em !important;
+      line-height: 1.7;
+    }
+  </style>
 </head>
 
 <body class="lp-fnb">
