--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
   </div>
 </section>
 
+  <!-- 飲食店向けライトパッケージ導線 -->
+<section class="lp-entry">
+  <p class="lp-entry__text">
+    飲食店経営者の方へ｜
+    <a href="/lp-fnb.html" class="lp-entry__link">
+      飲食店向けライトパッケージはこちら →
+    </a>
+  </p>
+</section>
+
   <!-- CTA：無料相談 -->
 <section class="section cta" id="contact-cta">
   <h2>まずは、お気軽にご相談ください。</h2>
