--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -113,7 +113,18 @@
     </div>
   </section>
 
+<!-- LP 途中CTA（離脱防止） -->
+<div class="lp-fnb-mid-cta">
+  <p class="lp-fnb-mid-cta__text">
+    ここまで読んで「少し気になる」と感じたら、
+    まずはお話だけでも大丈夫です。
+  </p>
+  <a href="/contact.html" class="btn btn-primary">
+    相談だけでも聞いてみる
+  </a>
+</div>
 
+  
   <!-- =========================
        SECTION 4｜90日後の未来
   ========================== -->
