--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -14,26 +14,29 @@
   <!-- =========================
        SECTION 1｜HERO
   ========================== -->
-  <section class="lp-fnb-hero">
-    <div class="lp-fnb-hero__inner">
-      <h1 class="lp-fnb-hero__title">
-        あなたのお店の 「良さ」 を、<br>
-        もっとたくさんの人に知ってもらいませんか？
-      </h1>
+ <section class="lp-fnb-hero">
+  <div class="lp-fnb-hero__inner">
+    <h1 class="lp-fnb-hero__title">
+      あなたのお店の「良さ」を、<br>
+      もっとたくさんの人に知ってもらいませんか？
+    </h1>
 
-      <p class="lp-fnb-hero__lead">
-        あなたのお店には、もうすでに 「良さ」 があります。<br>
-        おいしい料理、心のこもった接客、落ち着く空間…。<br><br>
-        ただ、その魅力が 「まだ十分に伝わっていない」 だけかもしれません。<br><br>
-        このプランは、今ある良さを否定するのではなく、<br>
-        その魅力がもっと伝わるように、やさしく整えていくお手伝いです。
-      </p>
+    <p class="lp-fnb-hero__lead">
+      あなたのお店には、もうすでに「良さ」があります。<br>
+      おいしい料理、心のこもった接客、落ち着く空間…。<br><br>
+      ただ、その魅力が「まだ十分に伝わっていない」だけかもしれません。<br><br>
+      このプランは、今ある良さを否定するのではなく、<br>
+      その魅力がもっと伝わるように、やさしく整えていくお手伝いです。
+    </p>
 
-      <a href="/contact.html" class="lp-fnb-hero__cta btn btn-primary">
+    <div class="lp-fnb-hero__cta">
+      <a href="/contact.html" class="btn btn-primary">
         まずは、お話を聞かせてください（無料）
       </a>
     </div>
-  </section>
+  </div>
+</section>
+
 
 
   <!-- =========================
