--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -32,9 +32,9 @@
     </p>
 
     <div class="lp-fnb-hero__cta">
-      <a href="/contact.html" class="btn btn-primary">
-        まずは、お話を聞かせてください（無料）
-      </a>
+      <a href="/contact.html" class="lp-fnb-btn lp-fnb-btn--primary">
+  まずは、お話を聞かせてください（無料）
+　　　　</a>
     </div>
   </div>
 </section>
@@ -138,7 +138,7 @@
     ここまで読んで「少し気になる」と感じたら、
     まずはお話だけでも大丈夫です。
   </p>
-  <a href="/contact.html" class="btn btn-primary">
+  <a href="/contact.html" class="lp-fnb-btn lp-fnb-btn--primary">
     相談だけでも聞いてみる
   </a>
 </div>
@@ -295,7 +295,7 @@
       その良さを、もう少しだけ 「外の世界」 に届けてみませんか？
     </p>
 
-    <a href="/contact.html" class="btn btn-primary">
+    <a href="/contact.html" class="lp-fnb-btn lp-fnb-btn--primary">
       無料で相談する
     </a>
   </section>
