--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="/css/lp-fnb.css">
 
 </head>
-
+<!-- ★ここでLP専用の字間を直接指定する -->
+<body class="lp-fnb" style="letter-spacing:0.8em; line-height:1.7;">
 
 
   <!-- =========================
