--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -10,7 +10,7 @@
 
 </head>
 <!-- ★ここでLP専用の字間を直接指定する -->
-<body class="lp-fnb" style="letter-spacing:0.8em; line-height:1.7;">
+<body class="lp-fnb" >
 
 
   <!-- =========================
