--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>飲食店向けライトパッケージ｜EXPAND</title>
   <meta name="description" content="飲食店向けに、今ある“良さ”をやさしく整えて伝わる形にするライトパッケージ。魅力を見つけ、伝わる形にし、また来たくなる流れをつくります。">
-  <link rel="stylesheet" href="css/styles.css?v=1004">
-  <link rel="stylesheet" href="/css/lp-fnb.css">
+  <link rel="stylesheet" href="/css/styles.css?v=1004">
+　<link rel="stylesheet" href="/css/lp-fnb.css?v=2">
+
 
 </head>
 <!-- ★ここでLP専用の字間を直接指定する -->
