--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -220,7 +220,7 @@
 
 
   <!-- =========================
-       SECTION 6｜事例（仮）
+       SECTION 6｜事例
   ========================== -->
   <section class="lp-fnb-cases">
     <figure class="lp-fnb-cases__media">
@@ -234,19 +234,27 @@
     </p>
 
     <div class="lp-fnb-cases__block">
-      <h3>居酒屋さんの例（カウンター8席＋テーブル2卓）</h3>
-      <p>
-        地元の常連さんに愛されている居酒屋さんでしたが、<br>
-        「新しいお客さまにも、もっと来てほしい」というご相談をいただきました。<br><br>
-        そこで、<br><br>
-        ・看板メニューの写真を撮り直し<br>
-        ・メニュー表の言葉と並び順を整理<br>
-        ・Instagramで週1回だけ「今日の一品」を発信<br><br>
-        といった、小さな見直しを一緒に行いました。<br><br>
-        その結果、3ヶ月で新規来店数が 20〜30％ほど増え、<br>
-        「Instagramを見て来ました」 というお客さまの声も増えてきました。
-      </p>
-    </div>
+  <h3>居酒屋さんの例（カウンター8席＋テーブル2卓）</h3>
+
+  <p>
+    地元の常連さんに愛されている居酒屋さんでしたが、
+    「新しいお客さまにも、もっと来てほしい」というご相談をいただきました。
+  </p>
+
+  <p class="lp-fnb-cases__label">そこで、</p>
+
+  <ul class="lp-fnb-cases__list">
+    <li>看板メニューの写真を撮り直し</li>
+    <li>メニュー表の言葉と並び順を整理</li>
+    <li>Instagramで週1回だけ「今日の一品」を発信</li>
+  </ul>
+
+  <p>
+    といった、小さな見直しを一緒に行いました。<br><br>
+    その結果、3ヶ月で新規来店数が 20〜30％ほど増え、
+    「Instagramを見て来ました」 というお客さまの声も増えてきました。
+  </p>
+　　</div>
   </section>
 
 
