--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -10,8 +10,19 @@
 
 
 </head>
-<!-- ★ここでLP専用の字間を直接指定する -->
 <body class="lp-fnb" >
+  
+  <!-- ヘッダー -->
+<header class="site-header">
+  <a class="brand" href="/">
+    <img src="/assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
+  </a>
+  <nav class="nav">
+    <a href="/">ホーム</a>
+    <a href="/about.html">会社概要</a>
+    <a href="/contact.html" class="btn small">お問い合わせ</a>
+  </nav>
+</header>
 
 
   <!-- =========================
