--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -320,5 +320,22 @@
     </a>
   </section>
 
+<footer class="site-footer">
+  <div class="footer-inner">
+    <div class="foot-brand">
+      <!-- LPではロゴ非表示でOK（押し売り感を減らす） -->
+    </div>
+
+    <div class="foot-links">
+      <a href="/about.html">会社概要</a>
+      <a href="/contact.html">お問い合わせ</a>
+      <a href="/privacy.html">プライバシーポリシー</a>
+      <a href="/terms.html">サイト利用規約</a>
+    </div>
+  </div>
+
+  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
+</footer>
+  
 </body>
 </html>
